2002-05-04  ------ omnetpp-2.2 released ------

2002-04-03  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* README : added note about experimental message subclassing

2001-11-25  Andras Varga
 
	* created from the Dyna sample simulation