@@ -4,7 +4,7 @@
 
 # TARGTYPE "Win32 (x86) Console Application" 0x0103
 
-CFG=dyna - Win32 Debug Tkenv
+CFG=dyna2 - Win32 Debug Tkenv
 !MESSAGE This is not a valid makefile. To build this project using NMAKE,
 !MESSAGE use the Export Makefile command and run
 !MESSAGE
@@ -13,14 +13,14 @@ CFG=dyna - Win32 Debug Tkenv
 !MESSAGE You can specify a configuration when running NMAKE
 !MESSAGE by defining the macro CFG on the command line. For example:
 !MESSAGE
-!MESSAGE NMAKE /f "dyna.mak" CFG="dyna - Win32 Debug Tkenv"
+!MESSAGE NMAKE /f "dyna.mak" CFG="dyna2 - Win32 Debug Tkenv"
 !MESSAGE
 !MESSAGE Possible choices for configuration are:
 !MESSAGE
-!MESSAGE "dyna - Win32 Debug Tkenv" (based on "Win32 (x86) Console Application")
-!MESSAGE "dyna - Win32 Debug Cmdenv" (based on "Win32 (x86) Console Application")
-!MESSAGE "dyna - Win32 Release Tkenv" (based on "Win32 (x86) Console Application")
-!MESSAGE "dyna - Win32 Release Cmdenv" (based on "Win32 (x86) Console Application")
+!MESSAGE "dyna2 - Win32 Debug Tkenv" (based on "Win32 (x86) Console Application")
+!MESSAGE "dyna2 - Win32 Debug Cmdenv" (based on "Win32 (x86) Console Application")
+!MESSAGE "dyna2 - Win32 Release Tkenv" (based on "Win32 (x86) Console Application")
+!MESSAGE "dyna2 - Win32 Release Cmdenv" (based on "Win32 (x86) Console Application")
 !MESSAGE
 
 # Begin Project
@@ -30,7 +30,7 @@ CFG=dyna - Win32 Debug Tkenv
 CPP=cl.exe
 RSC=rc.exe
 
-!IF  "$(CFG)" == "dyna - Win32 Debug Tkenv"
+!IF  "$(CFG)" == "dyna2 - Win32 Debug Tkenv"
 
 # PROP BASE Use_MFC 0
 # PROP BASE Use_Debug_Libraries 1
@@ -55,7 +55,7 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /debug /machine:I386 /pdbtype:sept
 # ADD LINK32 sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /debug /machine:I386 /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Debug Cmdenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Debug Cmdenv"
 
 # PROP BASE Use_MFC 0
 # PROP BASE Use_Debug_Libraries 1
@@ -80,7 +80,7 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /debug /machine:I386 /pdbtype:sept
 # ADD LINK32 sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /debug /machine:I386 /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@"
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Release Tkenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Release Tkenv"
 
 # PROP BASE Use_MFC 0
 # PROP BASE Use_Debug_Libraries 0
@@ -104,7 +104,7 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /machine:I386
 # ADD LINK32 sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /machine:I386 /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Release Cmdenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Release Cmdenv"
 
 # PROP BASE Use_MFC 0
 # PROP BASE Use_Debug_Libraries 0
@@ -132,10 +132,10 @@ LINK32=link.exe
 
 # Begin Target
 
-# Name "dyna - Win32 Debug Tkenv"
-# Name "dyna - Win32 Debug Cmdenv"
-# Name "dyna - Win32 Release Tkenv"
-# Name "dyna - Win32 Release Cmdenv"
+# Name "dyna2 - Win32 Debug Tkenv"
+# Name "dyna2 - Win32 Debug Cmdenv"
+# Name "dyna2 - Win32 Release Tkenv"
+# Name "dyna2 - Win32 Release Cmdenv"
 # Begin Group "Source Files"
 
 # PROP Default_Filter "cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
@@ -147,7 +147,7 @@ SOURCE=.\client.cpp
 
 SOURCE=.\dyna.ned
 
-!IF  "$(CFG)" == "dyna - Win32 Debug Tkenv"
+!IF  "$(CFG)" == "dyna2 - Win32 Debug Tkenv"
 
 # Begin Custom Build - NED Compiling $(InputPath)
 InputPath=.\dyna.ned
@@ -158,7 +158,7 @@ InputName=dyna
 
 # End Custom Build
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Debug Cmdenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Debug Cmdenv"
 
 # Begin Custom Build - NED Compiling $(InputPath)
 InputPath=.\dyna.ned
@@ -169,7 +169,7 @@ InputName=dyna
 
 # End Custom Build
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Release Tkenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Release Tkenv"
 
 # Begin Custom Build - NED Compiling $(InputPath)
 InputPath=.\dyna.ned
@@ -180,7 +180,7 @@ InputName=dyna
 
 # End Custom Build
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Release Cmdenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Release Cmdenv"
 
 # Begin Custom Build - NED Compiling $(InputPath)
 InputPath=.\dyna.ned
@@ -200,45 +200,45 @@ SOURCE=.\dyna_n.cpp
 # End Source File
 # Begin Source File
 
-SOURCE=.\dynapk.ned
+SOURCE=.\dynapacket.msg
 
-!IF  "$(CFG)" == "dyna - Win32 Debug Tkenv"
+!IF  "$(CFG)" == "dyna2 - Win32 Debug Tkenv"
 
 # Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
-InputPath=.\dynapk.ned
+InputPath=.\dynapacket.msg
 
-"dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
+"dynapacket_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapacket.msg
 
 # End Custom Build
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Debug Cmdenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Debug Cmdenv"
 
 # Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
-InputPath=.\dynapk.ned
+InputPath=.\dynapacket.msg
 
-"dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
+"dynapacket_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapacket.msg
 
 # End Custom Build
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Release Tkenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Release Tkenv"
 
 # Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
-InputPath=.\dynapk.ned
+InputPath=.\dynapacket.msg
 
-"dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
+"dynapacket_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapacket.msg
 
 # End Custom Build
 
-!ELSEIF  "$(CFG)" == "dyna - Win32 Release Cmdenv"
+!ELSEIF  "$(CFG)" == "dyna2 - Win32 Release Cmdenv"
 
 # Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
-InputPath=.\dynapk.ned
+InputPath=.\dynapacket.msg
 
-"dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
+"dynapacket_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapacket.msg
 
 # End Custom Build
 
@@ -247,7 +247,7 @@ InputPath=.\dynapk.ned
 # End Source File
 # Begin Source File
 
-SOURCE=.\dynapk_m.cpp
+SOURCE=.\dynapacket_m.cpp
 # End Source File
 # Begin Source File
 
