@@ -1,3 +1,7 @@
+2002-12-08  Andras Varga
+
+	* dynapk.ned renamed to dynapacket.msg; makefiles adjusted/regenerated
+
 2002-05-04  ------ omnetpp-2.2 released ------
 
 2002-04-03  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
